add handle chat_member_status to users & moderators

--- a/readme
+++ b/readme
@@ -1,4 +1,16 @@
 .env
 adminka/.env
 in adminka -> bundle exec whenever --update-crontab
+
 database.yml
+
+in telegram-bot-ruby 
+module Telegram
+  module Bot
+    module Types
+      class ChatMember < Base
+        attribute :status, Types::String
+      end
+    end
+  end
+end
